Succesfully implemented Blog Preview

--- a/React.js/gapi-blog/src/index.css
+++ b/React.js/gapi-blog/src/index.css
@@ -49,23 +49,6 @@
   font-size:xx-large;
 }
 
-
-/* blog previews / list  */
-.blog-preview{
-  padding: 10px 16px;
-  margin: 20px 0;
-  border-bottom:1px solid #fafafa;
-}
-
-.blog-preview h2{
-  margin-bottom: 8px;
-  font-size: 22px;
+.blogTitleColor{
   color: #f1356d;
-  font-weight: bold;
 }
-
-.blog-preview:hover{
-  box-shadow: 1px 3px 5px rgba(0, 0,0,0.1);
-
-}
-
